--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "tslint-eslint-rules": "^5.4.0",
+    "typedoc": "^0.14.2",
+    "typedoc-plugin-external-module-name": "^2.1.0",
     "typedoc-plugin-markdown": "^1.2.0",
     "typescript": "^3.4.5"
   },
