--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "tslint --project tsconfig.json",
     "clean": "del build",
     "compile": "npm run lint && npm run clean && tsc",
-    "build": "npm run compile && typedoc --theme markdown --mdHideSources && git add docs",
+    "build": "npm run compile && typedoc --theme markdown --excludePrivate --mdHideSources && git add docs",
     "commit": "git-cz",
     "release": "np",
     "version": "npm run build"
