--- a/config.json
+++ b/config.json
@@ -2,6 +2,8 @@
   "core": true,
   "ts": true,
   "license": "MIT",
-  "services": ["circleci"],
-  "minNodeVersion": "10.15.3"
+  "services": [
+    "circleci"
+  ],
+  "minNodeVersion": "12.0.0"
 }
