--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "eslint . --ext=.ts",
     "clean": "del build",
     "compile": "npm run lint && npm run clean && tsc",
-    "build": "npm run compile && typedoc --theme markdown --excludePrivate --HideSources && git add docs",
+    "build": "npm run compile",
     "commit": "git-cz",
     "release": "np",
     "version": "npm run build"
@@ -45,9 +45,6 @@
     "mrm": "^2.2.1",
     "np": "^5.2.1",
     "ts-node": "^8.8.2",
-    "typedoc": "^0.17.4",
-    "typedoc-plugin-external-module-name": "^3.0.0",
-    "typedoc-plugin-markdown": "^2.2.17",
     "typescript": "^3.8.3"
   },
   "nyc": {
