--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@poppinss/dev-utils": "^1.0.6",
     "@types/dotenv": "^8.2.0",
     "@types/node": "^14.0.1",
+    "benchmark": "^2.1.4",
     "commitizen": "^4.1.2",
     "cz-conventional-changelog": "^3.2.0",
     "del-cli": "^3.0.0",
