test: add provider test

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"author": "virk,adonisjs",
 	"license": "MIT",
 	"devDependencies": {
+		"@adonisjs/application": "^2.0.0",
 		"@adonisjs/fold": "^6.3.5",
 		"@adonisjs/mrm-preset": "^2.4.0",
 		"@poppinss/dev-utils": "^1.0.8",
