feat: add support for validating env variables
Now the Env module allows validating environment variables and
also extracts the types from the validation rules for better
intellisense

Closes #15

--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
 	},
 	"dependencies": {
 		"@poppinss/utils": "^2.5.7",
-		"dotenv": "^8.2.0"
+		"dotenv": "^8.2.0",
+		"validator": "^13.1.17"
 	},
 	"directories": {
 		"doc": "docs",
