--- a/package.json
+++ b/package.json
@@ -94,5 +94,9 @@
 	"bugs": {
 		"url": "https://github.com/adonisjs/env/issues"
 	},
-	"homepage": "https://github.com/adonisjs/env#readme"
+	"homepage": "https://github.com/adonisjs/env#readme",
+	"publishConfig": {
+		"access": "public",
+		"tag": "next"
+	}
 }
