--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
 	"name": "@adonisjs/env",
 	"version": "2.0.0",
 	"description": "Environment variable manager for Node.js",
-	"main": "build/providers/EnvProvider.js",
+	"main": "build/index.js",
 	"files": [
 		"build/adonis-typings",
-		"build/providers",
 		"build/src",
-		"build/standalone.d.ts",
-		"build/standalone.js"
+		"build/index.d.ts",
+		"build/index.js"
 	],
 	"scripts": {
 		"mrm": "mrm --preset=@adonisjs/mrm-preset",
