chore: update publish tag to latest

--- a/package.json
+++ b/package.json
@@ -93,6 +93,6 @@
 	"homepage": "https://github.com/adonisjs/env#readme",
 	"publishConfig": {
 		"access": "public",
-		"tag": "next"
+		"tag": "latest"
 	}
 }
