--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
 	"scripts": {
 		"mrm": "mrm --preset=@adonisjs/mrm-preset",
 		"pretest": "npm run lint",
-		"test": "node japaFile.js",
+		"test": "node .bin/test.js",
 		"clean": "del build",
 		"compile": "npm run lint && npm run clean && tsc",
 		"build": "npm run compile",
 		"commit": "git-cz",
-		"release": "np",
+		"release": "np --message=\"chore(release): %s\"",
 		"version": "npm run build",
 		"prepublishOnly": "npm run build",
 		"lint": "eslint . --ext=.ts",
@@ -92,5 +92,48 @@
 	"publishConfig": {
 		"access": "public",
 		"tag": "latest"
+	},
+	"mrmConfig": {
+		"core": true,
+		"license": "MIT",
+		"services": [
+			"github-actions"
+		],
+		"minNodeVersion": "14.15.4",
+		"probotApps": [
+			"stale",
+			"lock"
+		],
+		"runGhActionsOnWindows": false
+	},
+	"eslintConfig": {
+		"extends": [
+			"plugin:adonis/typescriptPackage",
+			"prettier"
+		],
+		"plugins": [
+			"prettier"
+		],
+		"rules": {
+			"prettier/prettier": [
+				"error",
+				{
+					"endOfLine": "auto"
+				}
+			]
+		}
+	},
+	"eslintIgnore": [
+		"build"
+	],
+	"prettier": {
+		"trailingComma": "es5",
+		"semi": false,
+		"singleQuote": true,
+		"useTabs": false,
+		"quoteProps": "consistent",
+		"bracketSpacing": true,
+		"arrowParens": "always",
+		"printWidth": 100
 	}
 }
