--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"mrm": "mrm --preset=@adonisjs/mrm-preset",
 		"pretest": "npm run lint",
 		"test": "node .bin/test.js",
-		"clean": "del build",
+		"clean": "del-cli build",
 		"compile": "npm run lint && npm run clean && tsc",
 		"build": "npm run compile",
 		"commit": "git-cz",
@@ -45,9 +45,9 @@
 		"github-label-sync": "^2.0.1",
 		"husky": "^7.0.1",
 		"japa": "^4.0.0",
-		"mrm": "^3.0.2",
-		"np": "^7.5.0",
-		"prettier": "^2.3.2",
+		"mrm": "^3.0.10",
+		"np": "^7.6.0",
+		"prettier": "^2.5.1",
 		"typescript": "^4.5.5"
 	},
 	"nyc": {
@@ -75,7 +75,7 @@
 	"dependencies": {
 		"@poppinss/utils": "^4.0.2",
 		"dotenv": "^16.0.0",
-		"validator": "^13.6.0"
+		"validator": "^13.7.0"
 	},
 	"directories": {
 		"doc": "docs",
