--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"scripts": {
 		"mrm": "mrm --preset=@adonisjs/mrm-preset",
 		"pretest": "npm run lint",
-		"test": "node .bin/test.js",
+		"test": "node -r ts-node/register/transpile-only .bin/test.ts",
 		"clean": "del-cli build",
 		"compile": "npm run lint && npm run clean && tsc",
 		"build": "npm run compile",
@@ -33,6 +33,10 @@
 	"devDependencies": {
 		"@adonisjs/mrm-preset": "^5.0.2",
 		"@adonisjs/require-ts": "^2.0.10",
+		"@japa/assert": "^1.2.3",
+		"@japa/run-failed-tests": "^1.0.3",
+		"@japa/runner": "^1.2.0",
+		"@japa/spec-reporter": "^1.1.7",
 		"@poppinss/dev-utils": "^2.0.2",
 		"@types/node": "^17.0.19",
 		"commitizen": "^4.2.4",
@@ -44,10 +48,10 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"github-label-sync": "^2.0.1",
 		"husky": "^7.0.1",
-		"japa": "^4.0.0",
 		"mrm": "^3.0.10",
 		"np": "^7.6.0",
 		"prettier": "^2.5.1",
+		"ts-node": "^10.5.0",
 		"typescript": "^4.5.5"
 	},
 	"nyc": {
