--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 	},
 	"dependencies": {
 		"@poppinss/utils": "^4.0.2",
+		"@poppinss/validator-lite": "^1.0.1",
 		"dotenv": "^16.0.0",
 		"validator": "^13.7.0"
 	},
