--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 	},
 	"dependencies": {
 		"@poppinss/utils": "^5.0.0",
+    "@poppinss/validator-lite": "^1.0.1",
 		"dotenv": "^16.0.3",
 		"validator": "^13.7.0"
 	},
