--- a/package.json
+++ b/package.json
@@ -1,143 +1,118 @@
 {
-	"name": "@adonisjs/env",
-	"version": "3.0.9",
-	"description": "Environment variable manager for Node.js",
-	"main": "build/index.js",
-	"files": [
-		"build/adonis-typings",
-		"build/src",
-		"build/index.d.ts",
-		"build/index.js"
-	],
-	"scripts": {
-		"mrm": "mrm --preset=@adonisjs/mrm-preset",
-		"pretest": "npm run lint",
-		"test": "node -r @adonisjs/require-ts/build/register bin/test.ts",
-		"clean": "del-cli build",
-		"compile": "npm run lint && npm run clean && tsc",
-		"build": "npm run compile",
-		"commit": "git-cz",
-		"release": "np --message=\"chore(release): %s\"",
-		"version": "npm run build",
-		"prepublishOnly": "npm run build",
-		"lint": "eslint . --ext=.ts",
-		"format": "prettier --write .",
-		"sync-labels": "github-label-sync --labels ./node_modules/@adonisjs/mrm-preset/gh-labels.json adonisjs/env"
-	},
-	"keywords": [
-		"env",
-		"adonisjs"
-	],
-	"author": "virk,adonisjs",
-	"license": "MIT",
-	"devDependencies": {
-		"@adonisjs/mrm-preset": "^5.0.3",
-		"@adonisjs/require-ts": "^2.0.13",
-		"@japa/assert": "^1.3.6",
-		"@japa/run-failed-tests": "^1.1.0",
-		"@japa/runner": "^2.2.2",
-		"@japa/spec-reporter": "^1.3.2",
-		"@poppinss/dev-utils": "^2.0.3",
-		"@types/node": "^18.11.0",
-		"commitizen": "^4.2.5",
-		"cz-conventional-changelog": "^3.3.0",
-		"del-cli": "^5.0.0",
-		"eslint": "^8.25.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-adonis": "^2.1.1",
-		"eslint-plugin-prettier": "^4.2.1",
-		"github-label-sync": "^2.2.0",
-		"husky": "^8.0.1",
-		"mrm": "^4.1.7",
-		"np": "^7.6.2",
-		"prettier": "^2.7.1",
-		"typescript": "^4.8.4"
-	},
-	"nyc": {
-		"exclude": [
-			"test"
-		],
-		"extension": [
-			".ts"
-		]
-	},
-	"husky": {
-		"hooks": {
-			"commit-msg": "node ./node_modules/@adonisjs/mrm-preset/validateCommit/conventional/validate.js"
-		}
-	},
-	"config": {
-		"commitizen": {
-			"path": "cz-conventional-changelog"
-		}
-	},
-	"np": {
-		"contents": ".",
-		"anyBranch": false
-	},
-	"dependencies": {
-		"@poppinss/utils": "^5.0.0",
-		"@poppinss/validator-lite": "^1.0.1",
-		"dotenv": "^16.0.3",
-		"validator": "^13.7.0"
-	},
-	"directories": {
-		"doc": "docs",
-		"test": "test"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/adonisjs/env.git"
-	},
-	"bugs": {
-		"url": "https://github.com/adonisjs/env/issues"
-	},
-	"homepage": "https://github.com/adonisjs/env#readme",
-	"publishConfig": {
-		"access": "public",
-		"tag": "latest"
-	},
-	"mrmConfig": {
-		"core": true,
-		"license": "MIT",
-		"services": [
-			"github-actions"
-		],
-		"minNodeVersion": "14.15.4",
-		"probotApps": [
-			"stale",
-			"lock"
-		],
-		"runGhActionsOnWindows": false
-	},
-	"eslintConfig": {
-		"extends": [
-			"plugin:adonis/typescriptPackage",
-			"prettier"
-		],
-		"plugins": [
-			"prettier"
-		],
-		"rules": {
-			"prettier/prettier": [
-				"error",
-				{
-					"endOfLine": "auto"
-				}
-			]
-		}
-	},
-	"eslintIgnore": [
-		"build"
-	],
-	"prettier": {
-		"trailingComma": "es5",
-		"semi": false,
-		"singleQuote": true,
-		"useTabs": false,
-		"quoteProps": "consistent",
-		"bracketSpacing": true,
-		"arrowParens": "always",
-		"printWidth": 100
-	}
+  "name": "@adonisjs/env",
+  "version": "3.0.9",
+  "description": "Environment variable manager for Node.js",
+  "main": "build/index.js",
+  "type": "module",
+  "files": [
+    "build/src",
+    "build/index.d.ts",
+    "build/index.js"
+  ],
+  "exports": {
+    ".": "./build/index.js"
+  },
+  "scripts": {
+    "pretest": "npm run lint",
+    "test": "npm run vscode:test",
+    "clean": "del-cli build",
+    "compile": "npm run lint && npm run clean && tsc",
+    "build": "npm run compile",
+    "release": "np",
+    "version": "npm run build",
+    "prepublishOnly": "npm run build",
+    "lint": "eslint . --ext=.ts",
+    "format": "prettier --write .",
+    "sync-labels": "github-label-sync --labels .github/labels.json adonisjs/env",
+    "vscode:test": "node --loader=ts-node/esm bin/test.ts"
+  },
+  "keywords": [
+    "env",
+    "adonisjs"
+  ],
+  "author": "virk,adonisjs",
+  "license": "MIT",
+  "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@japa/assert": "^1.3.6",
+    "@japa/expect-type": "^1.0.2",
+    "@japa/run-failed-tests": "^1.1.0",
+    "@japa/runner": "^2.2.2",
+    "@japa/spec-reporter": "^1.3.2",
+    "@poppinss/dev-utils": "^2.0.3",
+    "@swc/core": "^1.3.9",
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^18.11.0",
+    "del-cli": "^5.0.0",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-adonis": "^3.0.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "fs-extra": "^10.1.0",
+    "github-label-sync": "^2.2.0",
+    "husky": "^8.0.1",
+    "np": "^7.6.2",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@poppinss/utils": "^6.0.0-1",
+    "@poppinss/validator-lite": "^1.0.1",
+    "dotenv": "^16.0.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/adonisjs/env.git"
+  },
+  "bugs": {
+    "url": "https://github.com/adonisjs/env/issues"
+  },
+  "homepage": "https://github.com/adonisjs/env#readme",
+  "eslintConfig": {
+    "extends": [
+      "plugin:adonis/typescriptPackage",
+      "prettier"
+    ],
+    "plugins": [
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "endOfLine": "auto"
+        }
+      ]
+    }
+  },
+  "eslintIgnore": [
+    "build"
+  ],
+  "prettier": {
+    "trailingComma": "es5",
+    "semi": false,
+    "singleQuote": true,
+    "useTabs": false,
+    "quoteProps": "consistent",
+    "bracketSpacing": true,
+    "arrowParens": "always",
+    "printWidth": 100
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "publishConfig": {
+    "access": "public",
+    "tag": "next"
+  },
+  "np": {
+    "message": "chore(release): %s",
+    "tag": "next",
+    "branch": "main",
+    "anyBranch": false
+  }
 }
