--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adonisjs/env",
-  "version": "3.0.9",
+  "version": "4.0.0-0",
   "description": "Environment variable manager for Node.js",
   "main": "build/index.js",
   "type": "module",
