--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "pretest": "npm run lint",
-    "test": "npm run vscode:test",
+    "test": "c8 npm run vscode:test",
     "clean": "del-cli build",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
@@ -44,6 +44,7 @@
     "@swc/core": "^1.3.14",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.11.0",
+    "c8": "^7.12.0",
     "del-cli": "^5.0.0",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
@@ -114,5 +115,14 @@
     "tag": "next",
     "branch": "main",
     "anyBranch": false
+  },
+  "c8": {
+    "reporter": [
+      "text",
+      "html"
+    ],
+    "exclude": [
+      "tests/**"
+    ]
   }
 }
