chore: make tsconfig strict

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "strictNullChecks": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "noImplicitAny": false,
+    "strictPropertyInitialization": true,
+    "noImplicitAny": true,
+    "strictBindCallApply": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
     "skipLibCheck": true,
