--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@japa/assert": "^1.4.1",
     "@japa/expect-type": "^1.0.3",
+    "@japa/file-system": "^1.0.1",
     "@japa/run-failed-tests": "^1.1.1",
     "@japa/runner": "^2.3.0",
     "@japa/spec-reporter": "^1.3.3",
