--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "exports": {
     ".": "./build/index.js"
   },
+  "engines": {
+    "node": ">=18.16.0"
+  },
   "scripts": {
     "pretest": "npm run lint",
     "test": "cross-env NODE_DEBUG=adonisjs:env c8 npm run quick:test",
