--- a/package.json
+++ b/package.json
@@ -84,11 +84,11 @@
   },
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "np": {
     "message": "chore(release): %s",
-    "tag": "next",
+    "tag": "latest",
     "branch": "main",
     "anyBranch": false
   },
